@@ -6,13 +6,3 @@ JavaFX8 + WeldSEによるシンプルなGUIの実装例
 JavaFX8によるアプリケーションで、Weld-SEを組み合わせたサンプル。
 
 プログレスダイアログとワーカースレッドとの連携を含む。
-
-## Java10ビルド
-
-Java10環境下において、
-
-```java
-java --add-modules javafx.controls -jar target\simplecdiexample-0.0.1-SNAPSHOT.jar
-```
-
-のように起動する。
